* Fri Sep 13 2024 Steven Pritchard <steve@sicura.us> - 7.7.0
- [puppetsync] Update module dependencies to support simp-iptables 7.x

* Wed Aug 21 2024 Steven Pritchard <steve@sicura.us> - 7.6.1
- Fix unmask_rpc-gssd.service exec resource (#109)

* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 7.6.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 7.5.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Thu Sep 07 2023 Steven Pritchard <steve@sicura.us> - 7.4.0
- Add AlmaLinux 8 support

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.3.0
- Add RockyLinux 8 support

* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.2.0
- Update from camptocamp/systemd to puppet/systemd

* Tue Jul 06 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.1.0
- Fixed
  - Added _netdev to the default mount options
  - Ensure that remote-fs.target is enabled

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.1.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Mon Jan 11 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.0.2
- Fixed formatting in the metadata.json file.

* Thu Nov 12 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.1-0
- Update the required version of simp/svckill to the puppet 6 safe version.

* Fri Jan 10 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Added EL8 support
- Dropped EL6 support
- Refactored the module.  Notable feature/API changes:
  - Overall changes
    - Dropped stunnel support for NFSv3.  This tunneling did not work because:
      - The NFS client sends the NFS server Network Status Manager (NSM)
        notifications via UDP, exclusively.
      - At multi-NFS-server sites, a unique `rpcbind` port per server is