@@ -1,0 +1,24 @@
+---
+# Common defaults for all operating systems
+# These values will be used unless overridden by OS-specific data
+
+# Controls whether to manage tcpwrappers configuration
+# TCP wrappers was dropped in EL8+
+nfs::manage_tcpwrappers: true
+
+# Controls whether to install quota-rpc package
+# In EL7, rpc.rquotad files were in the quota package
+# In EL8+, quota-rpc package is needed for NFS servers
+nfs::install_quota_rpc: false
+
+# Controls whether to manage /etc/sysconfig/nfs
+# In EL7, /etc/sysconfig/nfs is still needed for some daemon options
+# In EL8+, all configuration is in /etc/nfs.conf
+nfs::manage_sysconfig_nfs: false
+
+# Controls whether to apply SELinux hotfix for Kerberos
+# Only needed in EL7 with Kerberos due to selinux-policy bugs
+nfs::apply_selinux_hotfix: false
+
+# Minimum supported OS version (used for warnings)
+nfs::minimum_os_version: '7.4'
