@@ -92,7 +92,7 @@ class nfs::base::config
     }
   }
 
-  if (versioncmp($facts['os']['release']['major'], '8') < 0) {
+  if $nfs::manage_sysconfig_nfs {
     # In EL > 7, NFS services must be configured by /etc/nfs.conf. In EL7, however,
     # /etc/sysconfig/nfs is still needed to enable use of gssproxy and to allow
     # configuration of a handful of NFS daemon command line options that were not
