@@ -8,7 +8,7 @@ class nfs::client::tcpwrappers {
   assert_private()
 
   # TCP wrappers was dropped in EL8
-  if (versioncmp($facts['os']['release']['major'], '8') < 0) and $nfs::nfsv3 {
+  if $nfs::manage_tcpwrappers and $nfs::nfsv3 {
     include 'tcpwrappers'
 
     # On EL7, the following NFS-client-related executables are dynamically
