@@ -1,6 +1,6 @@
 {
   "name": "simp-nfs",
-  "version": "7.7.0",
+  "version": "7.8.0",
   "author": "SIMP Team",
   "summary": "manages NFS server and client, also PKI and stunnelling",
   "license": "Apache-2.0",
@@ -16,7 +16,7 @@
   "dependencies": [
     {
       "name": "puppet/systemd",
-      "version_requirement": ">= 4.0.2 < 8.0.0"
+      "version_requirement": ">= 4.0.2 < 10.0.0"
     },
     {
       "name": "puppet/augeasproviders_sysctl",
